add user permission

--- a/server/src/main/resources/messages/messages_en.properties
+++ b/server/src/main/resources/messages/messages_en.properties
@@ -2,3 +2,5 @@ success=200
 request_message_error=170
 account_exist=1002
 accountGroup_exist=1003
+permission_id_is_not_empty=2002
+module_id_is_not_null=2003
