--- a/server/src/main/resources/i18n/enums/enums_en.properties
+++ b/server/src/main/resources/i18n/enums/enums_en.properties
@@ -1,2 +1,8 @@
-accounts.status1=pass
-accounts.status2=not pass
+accounts.status0=invalid
+accounts.status1=incumbency
+accounts.status2=dismission
+permissions.type1=interface
+permissions.type2=page
+permissions.type3=component
+permissions.status0=invalid
+permissions.status1=valid
