--- a/server/src/main/resources/i18n/codes_zh_cn.properties
+++ b/server/src/main/resources/i18n/codes_zh_cn.properties
@@ -2,11 +2,85 @@
 900=验证码错误
 1000=数据校验错误
 821=参数错误
-1002=账户已存在
-1003=部门已存在
+#1002=账户已存在
+
+1001=账户不存在
+1002=更新账户失败
+1003=账户密码错误
+1004=更新账户密码失败
+1005=更新账户状态失败
+1006=用户名不能为空
+1007=用户名已存在
+1008=姓名不能为空
+1009=姓名已存在
+1010=手机号不能为空
+1011=手机号已存在
+1012=邮箱不能为空
+1013=邮箱已存在
+1014=部门不能为空
+1015=密码不能为空
+1016=密码不能小于8位
+1017=密码不能大于32位
+1018=用户状态不能为空
+1019=用户id不能为空
+
+1201=部门名称已存在
+1202=更新部门失败
+1203=部门不存在
+1204=部门名称不能为空
+1205=父部门不能为空
+1206=父部门不存在
+1207=部门拥有子部门
+
+4001=更新角色失败
+4002=删除角色失败
+4003=角色不存在
+4004=角色名不能为空
+4005=角色名已存在
+
+5001=更新权限失败
+5002=删除权限失败
+5003=权限不存在
+5004=权限名称不能为空
+5005=权限名称已存在
+5006=权限码不能为空
+5007=权限码格式不对
+5008=权限码已存在
+5009=权限类型不能为空
+5010=权限类型不正确
+
+6001=更新权限模块失败
+6002=删除权限模块失败
+6003=权限模块不能为空
+6004=模块不存在
+6005=父模块不能为空
+6006=父模块不存在
+6007=模块名称不能为空
+6008=模块名称已经存在
+
+8001=新增客户端失败
+8002=更新客户端失败
+8003=删除客户端失败
+8004=客户端不存在
+8005=客户端id错误
+8006=客户端密钥错误
+8007=访问客户端权限不足
+8008=客户端id不能为空
+8009=客户端id不存在
+8010=客户端名称不能为空
+8011=客户端状态不合法
+
+9001=新增客户端模块失败
+9002=模块id不能为空
+9003=模块id不能为空
+
 2002=权限码不能为空
 2003=模块名不能为空
-1017=权限模块删除失败，请解绑其下权限
-1009=部门删除失败，部门不为空
-4001=角色数据权限格式错误
-4002=角色数据权限新增失败
+#1017=权限模块删除失败，请解绑其下权限
+#1009=部门删除失败，部门不为空
+#4001=角色数据权限格式错误
+#4002=角色数据权限新增失败
+
+3001=系统错误
+3002=登录状态不合法
+3003=数据绑定错误
