--- a/server/src/main/resources/i18n/enums/enums_zh_cn.properties
+++ b/server/src/main/resources/i18n/enums/enums_zh_cn.properties
@@ -4,6 +4,7 @@ accounts.status2=离职
 permissions.type1=接口
 permissions.type2=页面
 permissions.type3=组件
+permissions.type4=授权
 permissions.status0=无效
 permissions.status1=有效
 
