add client authorization target interface

--- a/server/src/main/resources/i18n/codes_zh_cn.properties
+++ b/server/src/main/resources/i18n/codes_zh_cn.properties
@@ -69,6 +69,9 @@
 8009=客户端id不存在
 8010=客户端名称不能为空
 8011=客户端状态不合法
+8012=客户端授权对象ip地址为空
+8013=客户端授权对象ip地址已存在
+8014=新增客户端授权对象失败
 
 9001=新增客户端模块失败
 9002=模块id不能为空
