--- a/server/src/main/resources/i18n/codes_zh_cn.properties
+++ b/server/src/main/resources/i18n/codes_zh_cn.properties
@@ -72,6 +72,13 @@
 8012=客户端授权对象ip地址为空
 8013=客户端授权对象ip地址已存在
 8014=新增客户端授权对象失败
+8015=创建客户端回调地址失败
+8016=删除客户端回调地址失败
+8017=更新客户端回调地址失败
+8018=客户端回调地址不存在
+8019=客户端回调地址为空
+8020=客户端回调地址id为空
+
 
 9001=新增客户端模块失败
 9002=模块id不能为空
